argocd/kustomize/suse-ai/vault-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-httproute
  namespace: vault
spec:
  parentRefs:
    - name: common-server-gateway
      namespace: common-gateway
  hostnames:
    - vault.rajesh-kumar.in
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vault-ui
          port: 8200
